Drafter first text up to section 2

--- a/Optimal_Portfolio_Analysis.ipynb
+++ b/Optimal_Portfolio_Analysis.ipynb
@@ -7,61 +7,15 @@
    "source": [
     "# ETF Portfolio Optimization & Dynamic Asset Allocation\n",
     "\n",
-    "**Last updated:** 2025-07-18\n",
+    "**Last updated:** 2025-07-30\n",
     "\n",
-    "==============================================================================\n",
+    "This script provides a deep dive into portfolio optimization and aims to answer one question: what portfolio of ETFs should I invest in?  Financial theory provides us with a guide to answer this question and I will collect and explore the properties of Vanguard ETFs to determine what long-only strategy an investors should follow if she is willing to take the same level or risk as the overall market.  What is the overall market portfolio?  For our purposes, the benchmark will be the Vanguard ETF tracking the S&P 500, [VOO](https://investor.vanguard.com/investment-products/etfs/profile/voo), one of the largest ETFs in the world.  \n",
     "\n",
-    "       PORTFOLIO OPTIMIZATION & DYNAMIC ASSET ALLOCATION\n",
+    "I will walk through how we can collect the relevant data from Yahoo Finance, how to estimate mean returns and the covariances of ETFs, and how we can estimate the mean-variance efficient frontier.  We will explore the constraints we have to impose to make investment strategies feasible and what Bayesian-style techniques will help us to estimate features more robustly.  We will go through a bunch or advances portfolio optimization techniques, including Black-Litterman, Hierarchical Risk Parity, DCC-GARCH, and Markov Regime Switching models to re-estimate optimal portfolios that can match VOO's risk, and compare the performance of each method in-sample and via simulations.\n",
     "\n",
-    "==============================================================================\n",
+    "For the two best methods in-sample, the simple mean-variance optimization and the Markov Regime Switching, we will test their performance with an out-of-sample test and eventually come to our conclusion: the best portfolio can be found via simple mean-variance optimization!  Surprising, but also great as we can provide a simple tool to find the best portfolio mix for investors based on their risk and return preferences.  What is event more interesting: the answer will almost always be a combination of a high-risk Growth ETF and a Treasury ETF.  This closes the loop, Finance theory tells us that we can reap the greatest benefits from diversification blending assets with as little correlation as possible, exactly what we find here as well.\n",
     "\n",
-    "OVERVIEW:\n",
-    "\n",
-    "This script performs a comprehensive portfolio analysis using various optimization\n",
-    "techniques. It begins with classic Mean-Variance Optimization and then explores\n",
-    "more advanced methods to create robust and dynamic asset allocation strategies.\n",
-    "\n",
-    "The script is divided into the following main sections:\n",
-    "\n",
-    "  1.  SETUP & CONFIGURATION:\n",
-    "      -   Loads necessary libraries and defines global settings.\n",
-    "\n",
-    "  2.  DATA LOADING & PREPARATION:\n",
-    "      -   Fetches a list of Vanguard ETFs and their metadata via web scraping.\n",
-    "      -   Downloads historical price data for these ETFs from Yahoo Finance.\n",
-    "      -   Processes the data to calculate monthly returns over a specified window.\n",
-    "\n",
-    "  3.  STATIC PORTFOLIO ANALYSIS (MEAN-VARIANCE OPTIMIZATION):\n",
-    "      -   Calculates expected returns and covariance, applying \"shrinkage\"\n",
-    "          techniques (Ledoit-Wolf) for more stable estimates.\n",
-    "      -   Computes the \"Efficient Frontier\" to find optimal portfolios.\n",
-    "      -   Applies L1 regularization to remove small weights.\n",
-    "      -   Constructs several static portfolios and compares them to a benchmark (VOO).\n",
-    "\n",
-    "  4.  ADVANCED STATIC MODELS & ROBUSTNESS CHECKS:\n",
-    "      -   Implements Resampled Efficient Frontier, Rolling Window analysis,\n",
-    "          Black-Litterman, Risk Parity, Hierarchical Risk Parity (HRP), and\n",
-    "          DCC-GARCH models to create more robust portfolios.\n",
-    "\n",
-    "  5.  REGIME-SWITCHING MODEL:\n",
-    "      -   Loads external economic data (VIX, Treasury yields) to help\n",
-    "          identify distinct market \"regimes\" (e.g., low-volatility growth,\n",
-    "          high-volatility decline).\n",
-    "      -   Fits a Markov Regime-Switching model to the market data.\n",
-    "\n",
-    "  6.  REGIME-AWARE DYNAMIC STRATEGY:\n",
-    "      -   Calculates an optimal portfolio for each identified market regime.\n",
-    "      -   Backtests a dynamic strategy that adjusts its portfolio allocation\n",
-    "          based on the real-time probability of being in each regime.\n",
-    "\n",
-    "  7.  FINAL PERFORMANCE COMPARISON:\n",
-    "      -   Plots the cumulative returns of all tested strategies.\n",
-    "      -   Calculates and displays a table of key performance metrics (Return,\n",
-    "          Volatility, Sharpe Ratio, Max Drawdown) for a comprehensive comparison.\n",
-    "      -   Runs a Monte Carlo simulation to forecast future performance.\n",
-    "\n",
-    "==============================================================================\n",
-    "=============================================================================="
+    "I hope you enjoy the journey outlined in this Notebook as much as I enjoyed writing about it. "
    ]
   },
   {
@@ -71,16 +25,9 @@
    "source": [
     "### 1. Setup & Configuration\n",
     "\n",
-    "This cell imports required Python libraries, sets global display options,\n",
-    "and defines helper functions used throughout the analysis."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3641f4a9",
-   "metadata": {},
-   "source": [
-    "As a first step, load all package we are going to use.  There is a lot we will do, so we need to load a lot of packages."
+    "The first step is to import required Python libraries, set global display options, and defines helper functions used throughout the analysis.  I will also disable some warnings that otherwise are distracting.  \n",
+    "\n",
+    "There is a lot we will do in this scrip, so there are a lot of libraries to load!"
    ]
   },
   {
@@ -174,8 +121,9 @@
     "\n",
     "What we will do in this section:\n",
     "* **ETF universe:** Scrape the latest list of Vanguard ETFs.\n",
-    "* **Historical prices:** Retrieve adjusted close prices from Yahoo Finance via `yfinance`.\n",
-    "* **Return series:** Compute monthly returns and calculate mean and covariances."
+    "* **Historical prices:** Retrieve closing prices from Yahoo Finance via [`yfinance`](https://ranaroussi.github.io/yfinance/).\n",
+    "* **Return series:** Compute monthly returns and calculate mean and covariances.\n",
+    "* **Diversification** We will introduce the concept of diversification, which will provide guidance for the rest of the analysis. "
    ]
   },
   {
@@ -183,9 +131,11 @@
    "id": "a9c26d18",
    "metadata": {},
    "source": [
-    "First, we will need to find a systematic way to identify ETFs we can invest into.  Luckily, Vanguard is one of the leading ETF brokers and provides a great list of available ETFs [here](https://advisors.vanguard.com/investments/etfs).  We can just download the ETF list as csv-file, or we can scrape the table from the website directly.  I go with the latter solution so I always have the latest ETF list ready for the program.\n",
+    "We will need a systematic way to identify ETFs we can invest into.  Luckily, Vanguard is one of the leading ETF brokers and provides a great list of available ETFs [here](https://advisors.vanguard.com/investments/etfs).  We can just download the ETF list as csv-file, or we can scrape the table from the website directly.  I go with the latter solution so I always have the latest ETF list ready for the program.\n",
     "\n",
-    "The approach is quite straightforward: we use a webdriver to identify the table on the website, collect the relevant cells via their tags (in our case, ticker, ETF name, and expense ration), and click to the next page to do the same again.  You only need to make sure to add the path to the webdriver, in my case chromedriver. "
+    "The approach is quite straightforward: we use a webdriver to identify the table on the website, collect the relevant cells in the table via their HTML tags (in our case, ticker, ETF name, and expense ration), and click to the next page to do the same again.  You only need to make sure to add the path to the webdriver, in my case chromedriver. \n",
+    "\n",
+    "Web scraping is a useful skill to know, but we are focused on portfolio optimization.  Check out one of the many tutorials on working with Selenium to perform task similar to the one below, for example the [ScrapingBee Tutorial](https://www.scrapingbee.com/blog/selenium-python/) or [Selenium with Python](https://selenium-python.readthedocs.io/)."
    ]
   },
   {
@@ -317,7 +267,7 @@
    "id": "592d6033",
    "metadata": {},
    "source": [
-    "I want to ensure that my investment strategy is supported by broadly diversified ETFs, so I manually remove all industry-specific ETFs.  This is not really necessary to run the code or identify optimal portfolios, especially since the industry indices are themselves relatively well diversified across dozen or even hundreds of stocks."
+    "I want to make sure my investment strategy is supported by broadly diversified ETFs, so I manually remove all industry-specific ETFs.  This is not really necessary to run the code or identify optimal portfolios, especially since the industry indices are themselves relatively well diversified across dozen or even hundreds of stocks.  My concern is rather that a particularly well performing sector over a few year, such as IT, will dominate the optimal portfolio."
    ]
   },
   {
@@ -366,7 +316,7 @@
    "id": "1b23445f",
    "metadata": {},
    "source": [
-    "Now it is time to download the price history for each of the ETFs from Yahoo Finance. "
+    "Now it is time to download the price history for each of the ETFs from Yahoo Finance via [`yfinance`](https://ranaroussi.github.io/yfinance/). "
    ]
   },
   {
@@ -515,7 +465,7 @@
    "id": "240a44e9",
    "metadata": {},
    "source": [
-    "We will be using monthly observations for the most part, but we also need to remove NA values from the return table.  This is tricky, since the length of the ETF price history differs quite substantially, with some ET like the Total Treasury ETF (VTG) having no observations at all as it was created just recently.  Dropping all rows with NA values thus is not a solution.  Instead, we can require that ETFs have a minimum number of observations, in this case 10 years of data.  Since the ETF list on the website only contains currently available ETFs, we will drop all ETFs that have not at least 10 years of recent history.  We lose around around half of our ETFs through this, which is one of the main critiques of portfolio optimization: you need enough price history and basically have to exclude assets for which we cannot estimate covariances and expected returns."
+    "We will be using monthly observations for the most part, but we also need to remove NA values from the return table.  This is tricky, since the length of the ETF price history differs quite substantially with some ET like the Total Treasury ETF (VTG) having no observations at all as it was created just recently.  Dropping all rows with NA values thus is not a solution.  Instead, we can require ETFs to have a minimum number of observations, in this case 10 years of data.  Since the ETF list on the website only contains currently available ETFs, we will drop all ETFs that do not have at least 10 years of recent history.  We lose around half of our initial ETF list, which is one of the main critiques of portfolio optimization: you need enough price history and basically have to exclude assets for which you cannot estimate covariances and expected returns."
    ]
   },
   {
@@ -568,7 +518,7 @@
    "id": "0bfa58be",
    "metadata": {},
    "source": [
-    "Now we can explore the statistical properties of the ETFs we have.  With enough data, the central limit theorem tells us that we only need the first two moment to describe the distribution of random variables like returns, so let's have a look at means and variance.  "
+    "Now we can explore the statistical properties of the ETFs we have.  With enough data, the [Central Limit Theorem](https://www.probabilitycourse.com/chapter7/7_1_2_central_limit_theorem.php) implies that the sampling distribution of the sample mean of returns approaches a normal distribution, which can then be described by its mean and standard deviation, so let's have a look at the means and volatilities, i.e., the standard deviations of our ETFs.  "
    ]
   },
   {
@@ -619,7 +569,7 @@
    "id": "9525b3b7",
    "metadata": {},
    "source": [
-    "As expected, there is quite a big variation.  Some ETFs have very low historic returns, like VCIT, the intermediate corporate bonds ETFs, but in exchange also low volatility.  That means, these ETFs are expected to have a small put relatively consistent return over time.  On the other hand, ETFs like MGK, Mega Cap Growth, have experienced very high return over the past 10 year (more than 17% p.a. on average!), but they were also enormously volatile.  "
+    "There is quite a big variation between ETFs.  Some ETFs have very low historic returns, like VCIT, the intermediate corporate bonds ETFs, but also low volatility.  That means, these ETFs are expected to have a small put relatively consistent return over time.  On the other hand, ETFs like MGK, Mega Cap Growth, have experienced very high returns over the past 10 year (more than 17% p.a. on average!), but they were also enormously volatile and risky.  "
    ]
   },
   {
@@ -627,9 +577,7 @@
    "id": "f760aaf1",
    "metadata": {},
    "source": [
-    "There is also the covariance between assets to consider.  \n",
-    "\n",
-    "Let's first build some intuition how the covariance matrix of the ETFs actually looks like."
+    "The individual volatility of assets is only partially useful.  What is more interesting is how assets co-move with other assets over time.  So, let us have a look at the covariance between ETFs."
    ]
   },
   {
@@ -672,9 +620,15 @@
    "id": "bea8620e",
    "metadata": {},
    "source": [
-    "The covariance is quite widespread, just like the variance of in the diagonal.  Looking at the matrix, we actually can understand why portfolio optimization (and asset pricing in general) is focused on the covariance of assets.  There are only 55 elements in the diagonal (the variance of assets), but 55*54 elements everywhere else representing the covariance across assets.  So, it is much more important how asset co-vary with other assets rather than how volatile it is by itself. \n",
-    "\n",
-    "Let's also look at the correlation matrix:"
+    "The covariance is quite widespread, just like the variance in the diagonal.  Looking at the matrix, we actually can understand why portfolio optimization (and asset pricing in general) is focused on the covariance of assets.  There are only 55 elements in the diagonal (the variance of assets), but 55*54 elements everywhere else representing how each asset co-moves with each other assets.  So, it is much more important how asset co-move with other assets rather than how volatile it is by itself, especially when we combine assets to portfolio. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbee7eef",
+   "metadata": {},
+   "source": [
+    "Covariances are less intuitive than correlations, especially since correlations are bound between -1 and 1.  So, let's also have a look at the correlation matrix of the ETFs."
    ]
   },
   {
@@ -720,7 +674,7 @@
    "source": [
     "We already know assets have varying degrees of correlation from the covariance matrix, but the correlation matrix tells us one additional fact: no assets are perfectly correlated with each other (they would have a deep red color like the diagonal with correlation coefficient 1).  \n",
     "\n",
-    "This means that combinations of assets will have a lower variance than the weighted average of the variances.  To see why, consider the standard deviation of ETF 1 and ETF 2 and the linear combination of the two, with both asset not perfectly correlated\n",
+    "This means that combinations of assets will have a lower variance than the weighted average of the variances.  To see why, consider the standard deviation of ETF 1 and ETF 2, $\\sigma_1$ and $\\sigma_2$, and portfolio weights $w_1$ and $w_2$, where the assets are not perfectly correlated.\n",
     "\n",
     "The portfolio variance of two assets is given by:\n",
     "\n",
@@ -728,13 +682,13 @@
     "\\sigma_p^2 = w_1^2 \\sigma_1^2 + w_2^2 \\sigma_2^2 + 2w_1 w_2 \\rho_{12} \\sigma_1 \\sigma_2\n",
     "$$\n",
     "\n",
-    "Since the correlation $\\rho_{12} < 1$, the portfolio variance is **smaller** than the weighted average of the two ETF variances: \n",
+    "Since the correlation $\\rho_{12} < 1$, i.e., ETF 1 and ETF 2 do not move perfectly together, the portfolio variance is **smaller** than the square of the weighted average of the standard deviations of the two ETFs, and thus also less than the average of the individual variances in most cases: \n",
     "\n",
     "$$\n",
-    "\\sigma_p^2 < w_1^2 \\sigma_1^2 + w_2^2 \\sigma_2^2\n",
+    "\\sigma_p^2 < w_1^2 \\sigma_1^2 + w_2^2 \\sigma_2^2  + 2w_1 w_2 \\sigma_1 \\sigma_2 = (w_1 \\sigma_1 + w_2 \\sigma_2)^2\n",
     "$$\n",
     "\n",
-    "For the expected returns, this is not true.  The expected return is a weighted average of the ETF expected returns.\n",
+    "For the expected returns, this is not true.  The expected return is a weighted average of the individual expected returns of the ETFs, $\\mu_1$ and $\\mu_2$.\n",
     "\n",
     "$$\n",
     "\\mathbb{E}[R_p] = w_1 \\mu_1 + w_2 \\mu_2\n",
@@ -742,7 +696,7 @@
     "\n",
     "This is the idea behind **diversification**: by combining assets that are not perfectly correlated, the portfolio’s overall variance (risk) becomes lower than the average of the individual asset variances.  In other words, diversification helps smooth out the ups and downs, because not all assets move together.\n",
     "\n",
-    "Now we understand why diversification is great and we can try to find optimal portfolios that reduce the variance for a given expected return target, or maximize the expected return for a volatility/risk level we are willing to accept."
+    "Now we understand why diversification helps us when building portfolios to reduce risk and we can try to find optimal portfolios that reduce the variance for a given expected return target, or maximize the expected return for a volatility/risk level we are willing to accept."
    ]
   },
   {
