Drafter first text for section 6

--- a/Optimal_Portfolio_Analysis.ipynb
+++ b/Optimal_Portfolio_Analysis.ipynb
@@ -3855,7 +3855,13 @@
    "source": [
     "### 6. Regime‑Aware Dynamic Strategy\n",
     "\n",
-    "From the previous section, we have a Markov regime switching model that provides probabilities for being in the low or high risk state of the world.  In this section, we will be estimating for each regime the optimal portfolio and implement the trading strategy.  I can split the sample across the two state based on which state in the respective period is more likely.  I can use the sample for each regime to estimate the optimal portfolio that matches VOO's global volatility within the given state of the world.  This is especially useful as the Markov switching model can provide probabilities for being in either state in the next period based on the current yield curve spread the VIX, which we can use to blend the optimal portfolios for each regime based on the probabilities for being in either state.  Basically, this is a in-sample test as the probabilities are directly observed from the fitted model; below we will check how the model performs out of sample."
+    "From the previous section, we have a Markov regime-switching model that estimates the probability of being in a low- or high-risk state of the world at any given time. In t his section, we estimate the optimal portfolio for each regime and use these to construct a*one-month forward-looking trading strategy.\n",
+    "\n",
+    "To do so, we split the sample based on the regime that is more likely in each period, using the smoothed probabilities from the fitted model.  For each regime-specific subsample, we estimate an optimal portfolio that matches VOO’s global volatility *within that regime*.\n",
+    "\n",
+    "This is particularly useful because the Markov model provides predicted probabilities for each regime in the next period—based on current macroeconomic conditions captured by the VIX.  We can use these probabilities to blend the regime-specific portfolios into a forward-looking portfolio strategy that dynamically adjusts to the expected state of the market.\n",
+    "\n",
+    "Note that this constitutes an in-sample test, as the probabilities are inferred directly from the fitted model.  In section 8, we will evaluate how this strategy performs out-of-sample.\n"
    ]
   },
   {
@@ -3863,7 +3869,7 @@
    "id": "59e50fb4",
    "metadata": {},
    "source": [
-    "Now that we have a fitted Markov model with multiple states, we can estimate for *each* regime the efficient frontier and the optimal portfolio that matches VOO's volatility.  We can make wrap this in a function, so we can re-use the approach. "
+    "Now that we have a fitted Markov model with multiple states, we can estimate for *each* regime the efficient frontier and the optimal portfolio that matches VOO's volatility.  We can wrap this within-regime optimization in a function, so we can re-use the approach. "
    ]
   },
   {
@@ -4002,7 +4008,7 @@
    "id": "6b5b9a43",
    "metadata": {},
    "source": [
-    "Let's visualize the efficient frontiers for each regime, as well as the optimal portfolio/"
+    "We can also visualize the efficient frontiers for each regime, as well as the optimal portfolio."
    ]
   },
   {
@@ -4110,9 +4116,36 @@
     "    benchmark_vol          = voo_sigma_annual,\n",
     "    benchmark_ret          = voo_mu_annual,\n",
     "    title                  = \"Efficient Frontiers by Regime (Training Sample)\",\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d40531a7",
+   "metadata": {},
+   "source": [
+    "The plot shows that the low-volatility regime, Regime 0, has a steep efficient frontier positioned *northwest* of VOO’s global risk-return profile.  We know this is the low-volatility, high-expected-return regime, so it makes sense that this \"good\" state of the world would feature a steep frontier, where small increases in risk yield disproportionately high returns.  Because conditional risk is limited in this regime, we can afford to overweight historically risky ETFs to maximize expected returns.  This leads the optimizer to fully invest in the Mega Cap Growth ETF (MGK).  Since we are restricted to long-only portfolios, we cannot construct combinations that reach higher volatility levels, even though the portfolio remains below VOO’s global volatility.\n",
     "\n",
-    "# ---  Backtest the Dynamic Strategy ---\n",
+    "In contrast, Regime 1, the \"crisis\" regime, lies entirely below VOO's global expected return and shows a relatively flat efficient frontier—with a wide range of volatility but limited expected return.  In this high-risk state of the world, the optimal portfolio assigns over one-third of its weight to the Short-Term Inflation-Protected Securities ETF (VTIP).  We still target VOO’s volatility level, so the optimizer blends VTIP with the Russell 1000 Growth ETF (VONG), and additionally includes the S&P Mid-Cap 400 Value ETF (IVOV).\n",
+    "\n",
+    "The combination of the Treasury ETF and VONG is not new to us—we found it to be optimal already in the static mean-variance optimization.  In this \"crisis\" regime, we simply place much more weight on the Treasury ETF.  Adding IVOV is new, but it makes intuitive sense: during periods of crisis, investors seek assets with strong intrinsic value based on fundamentals, as well as diversification relative to large-cap growth. The Mid-Cap Value ETF offers both qualities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74cca905",
+   "metadata": {},
+   "source": [
+    "For back-testing, we use the marginal regime probabilities to blend the optimal portfolios for each regime.  This allows us to estimate the monthly in-sample returns of the strategy, which we will use for performance comparison in the sections below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973fecfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# At each month, the portfolio is a blend of the regime-optimal portfolios,\n",
     "# weighted by the smoothed probability of being in each regime at that time.\n",
     "dynamic_weights_list = []\n",
@@ -4130,36 +4163,6 @@
     "    np.array(dynamic_weights_list) * returns_final[etf_symbols].values, axis=1\n",
     ")\n",
     "dynamic_returns_series = pd.Series(dynamic_port_returns, index=returns_final.index)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d40531a7",
-   "metadata": {},
-   "source": [
-    "The plot shows that the low-volatility regime , Regime 0, has a more limited distribution, which is expected as certain volatility levels cannot even be reached with a long-only portfolio.  As a consequence, the optimal portfolio is an edge case, putting all weight into the Mega Cap Growth ETFs.  This makes sense as in a low market risk state, we can overweight historically risky ETFs to maximize expected returns while conditional volatility is low.  On the other hand, during periods of high market risk, Regime 1, we add to the portfolio our treasury ETF, keep some weight in a Growth ETF, and put more than 40% into the Dividend Appreciation ETF, VIG.  VIG is an interesting choice.  It has similar but lower expected return and expected volatility than VOO, so it would make sense to weight heavy on it to reach with the portfolio still VOO's global volatility while avoiding too much risk exposure during the high market risk state of the world."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5be227b",
-   "metadata": {},
-   "source": [
-    "There is also the Gordon-Growth model tha provides a simple relationship of price to expected dividends, discount rate (or market risk), and dividend growth: $P = \\dfrac{D_1}{r - g}$.  The total derivative is  \n",
-    "\n",
-    "$$\n",
-    "dP \\;=\\; -\\frac{P}{\\,r-g\\,}\\,dr \\;+\\; \\frac{P}{\\,r-g\\,}\\,dg.\n",
-    "$$\n",
-    "\n",
-    "When the discount rate rises during the high market risk Regime, a rise in the expected dividend growth rate at the same time can cushion the effect of rising interest rates.  VIG by definition tracks firms that have a history of rising dividends , so we can expect it to be more likely to see rising growth rates which can partially offsets the negative effect of rising interest rates, cushioning VIG’s price when market risk is high.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74cca905",
-   "metadata": {},
-   "source": [
-    "For back-testing, we can use the marginal probabilities to blend the optimal portfolios for the regimes.  We can estimate the monthly in-sample returns for this strategy and use it for performance comparison below."
    ]
   },
   {
@@ -4711,6 +4714,20 @@
    "metadata": {},
    "source": [
     "Now we can plot the regime characteristics from the training data, to check how whether the regimes make economic sense.  And as a final check, we can estimate the compound annual growth rate, give a direct measure of average performance during the out-of-sample period. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a1df6d",
+   "metadata": {},
+   "source": [
+    "There is also the Gordon-Growth model tha provides a simple relationship of price to expected dividends, discount rate (or market risk), and dividend growth: $P = \\dfrac{D_1}{r - g}$.  The total derivative is  \n",
+    "\n",
+    "$$\n",
+    "dP \\;=\\; -\\frac{P}{\\,r-g\\,}\\,dr \\;+\\; \\frac{P}{\\,r-g\\,}\\,dg.\n",
+    "$$\n",
+    "\n",
+    "When the discount rate rises during the high market risk Regime, a rise in the expected dividend growth rate at the same time can cushion the effect of rising interest rates.  VIG by definition tracks firms that have a history of rising dividends , so we can expect it to be more likely to see rising growth rates which can partially offsets the negative effect of rising interest rates, cushioning VIG’s price when market risk is high."
    ]
   },
   {
